--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "solid-js": "^1.8.18"
   },
   "devDependencies": {
     "@types/luxon": "^3.4.2",
@@ -27,6 +28,7 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "obsidian": "^1.6.6",
     "typescript": "^5.2.2",
-    "vite": "^5.3.4"
+    "vite": "^5.3.4",
+    "vite-plugin-solid": "^2.10.2"
   }
 }
