--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,27 @@
 {
-  "files": [],
-  "references": [
-    {
-      "path": "./tsconfig.app.json"
-    },
-    {
-      "path": "./tsconfig.node.json"
-    }
-  ]
+	"files": [],
+	"references": [
+		{
+			"path": "./tsconfig.app.json"
+		},
+		{
+			"path": "./tsconfig.node.json"
+		}
+	],
+	"compilerOptions": {
+		"baseUrl": ".",
+		"noImplicitAny": true,
+		"strict": true,
+		"target": "ESNext",
+		"module": "ESNext",
+		"strictNullChecks": true,
+		"paths": {
+			"@/*": ["./src/*"],
+			"obsidian-typings/implementations": [
+				"./node_modules/obsidian-typings/dist/implementations.d.ts",
+				"./node_modules/obsidian-typings/dist/implementations.cjs"
+			]
+		},
+		"types": ["obsidian-typings", "./src/libs/types"]
+	}
 }
