--- a/package.json
+++ b/package.json
@@ -1,43 +1,29 @@
 {
   "name": "obsidian-vite",
+  "author": "unxok",
+  "license": "MIT",
+  "keywords": [],
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite build --watch --mode=development",
     "build": "vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "postcss-discard": "^2.0.0",
-    "postcss-prefix-selector": "^1.16.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "solid-js": "^1.8.18"
-  },
   "devDependencies": {
-    "@types/luxon": "^3.4.2",
     "@types/node": "^20.14.11",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
-    "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
     "builtin-modules": "^4.0.0",
     "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
-    "eslint-plugin-solid": "^0.14.1",
-    "obsidian": "^1.6.6",
+    "obsidian": "latest",
+    "obsidian-typings": "^2.2.1-beta.33",
     "postcss": "^8.4.39",
     "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.5",
-    "tailwindcss": "^3.4.6",
-    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.2.2",
-    "vite": "^5.3.4",
-    "vite-plugin-solid": "^2.10.2"
+    "vite": "^5.3.4"
   }
 }
