--- a/package.json
+++ b/package.json
@@ -1,29 +1,31 @@
 {
-  "name": "obsidian-vite",
-  "author": "unxok",
-  "license": "MIT",
-  "keywords": [],
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite build --watch --mode=development",
-    "build": "vite build",
-    "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "@types/node": "^20.14.11",
-    "@typescript-eslint/eslint-plugin": "^7.15.0",
-    "@typescript-eslint/parser": "^7.15.0",
-    "autoprefixer": "^10.4.19",
-    "builtin-modules": "^4.0.0",
-    "eslint": "^8.57.0",
-    "obsidian": "latest",
-    "obsidian-typings": "^2.2.1-beta.33",
-    "postcss": "^8.4.39",
-    "prettier": "^3.3.3",
-    "typescript": "^5.2.2",
-    "vite": "^5.3.4"
-  }
+	"name": "obsidian-vite",
+	"author": "Unxok",
+	"license": "MIT",
+	"keywords": [],
+	"version": "0.0.0",
+	"main": "main.js",
+	"scripts": {
+		"dev": "vite build --watch --mode=development",
+		"build": "vite build",
+		"lint": "eslint . --report-unused-disable-directives --max-warnings 0",
+		"version": "node version-bump.mjs && git add manifest.json versions.json",
+		"release": "git tag -a %npm_config_tag% -m '%npm_config_tag%' && git push origin %npm_config_tag%"
+	},
+	"devDependencies": {
+		"@codemirror/language": "^6.10.3",
+		"@types/node": "^20.14.11",
+		"@typescript-eslint/eslint-plugin": "^7.15.0",
+		"@typescript-eslint/parser": "^7.15.0",
+		"autoprefixer": "^10.4.19",
+		"builtin-modules": "^3.3.0",
+		"eslint": "^8.57.0",
+		"obsidian": "latest",
+		"obsidian-typings": "^2.2.1-beta.33",
+		"postcss": "^8.4.39",
+		"prettier": "^3.3.3",
+		"tslib": "^2.8.0",
+		"typescript": "^4.7.4",
+		"vite": "^5.3.4"
+	}
 }
