obsidian typings implicit types working. Thx mnaoumov!

--- a/old.tsconfig.app.json
+++ b/old.tsconfig.app.json
@@ -14,7 +14,7 @@
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"moduleDetection": "force",
-		// "noEmit": true,
+		"noEmit": true,
 
 		/* Linting */
 		"strict": true,
