--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -4,10 +4,11 @@
 		"tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
 		"skipLibCheck": true,
 		"module": "ESNext",
-		"moduleResolution": "bundler",
+		"moduleResolution": "Bundler",
 		"allowSyntheticDefaultImports": true,
-		"strict": true,
-		"noEmit": true
+		"strict": true
+		// "noEmit": true
 	},
-	"include": ["vite.config.ts"]
+	"include": ["vite.config.ts"],
+	"types": ["obsidian-typings", "./src/libs/types"]
 }
