--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,11 @@
 {
-	"files": [],
-	"references": [
-		{
-			"path": "./tsconfig.app.json"
-		},
-		{
-			"path": "./tsconfig.node.json"
-		}
-	],
 	"compilerOptions": {
 		"baseUrl": ".",
 		"noImplicitAny": true,
 		"strict": true,
 		"target": "ESNext",
 		"module": "ESNext",
+		"moduleResolution": "Bundler",
 		"strictNullChecks": true,
 		"paths": {
 			"@/*": ["./src/*"],
